<resources>
    <string name="app_name">TravelNotes</string>

    <string name="note_title_label">Note title</string>
    <string name="note_text_label">Note placeholder</string>
    <string name="note_date_label">Date: %s</string>
    <string name="note_images_label">Add photos</string>

    <string name="home_title">@string/app_name</string>
    <string name="gallery_title">Gallery</string>
    <string name="create_note_title">Create a Note</string>

    <string name="note_delete_label">Delete</string>

    <string name="menu_save_note">Save</string>
    <string name="menu_edit_note">Edit</string>
    <string name="menu_update_note">Update</string>

</resources>
