<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save_note"
        android:title="@string/menu_save_note"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_edit_note"
        android:title="@string/menu_edit_note"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_update_note"
        android:title="@string/menu_update_note"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_delete_note"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="ifRoom"
        android:visible="false"/>

</menu>